k8s/apps/monitoring/uptime-kuma/app/ingress-route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: uptime-kuma
  namespace: monitoring
  annotations:
    external-dns.alpha.kubernetes.io/hostname: uptime.${SECRET_DOMAIN}
    external-dns.alpha.kubernetes.io/target: ${SECRET_DOMAIN}
spec:
  routes:
    - kind: Rule
      match: Host(`uptime.${SECRET_DOMAIN}`)
      priority: 10
      middlewares:
        - name: authentik
          namespace: network
      services:
        - name: uptime-kuma
          namespace: monitoring
          port: 3001
    - kind: Rule
      match: "Host(`uptime.${SECRET_DOMAIN}`) && PathPrefix(`/outpost.goauthentik.io/`)"
      priority: 15
      services:
        - kind: Service
          name: authentik-outpost
          port: 9000
